# tefl

./: README.md  tefl.cabal
lib/Data/: Tefl.hs
skel/: Skel.hs
src/Crypto/: Tefl.hs
tefl-old/: Main.hs  README.md  Spec.hs  tefl.cabal
