name:                tefl
version:             0.1.0.0
synopsis:            Trivially Easy File Locker
description:
  TEFL, or the Trivially Easy File Locker. is a program that allows you to
  create encrypted containers storing arbitrary data. It is essentially a secure
  way to interface with .tar.gpg files. TEFL includes options for compression
  and different types of encryption. TEFL stores everything in open formats, as
  to allow interaction with foreign programs. N.B. open formats are typically
  more secure than closed formats.
homepage:            https://github.com/pharpend/tefl
bug-reports:         https://github.com/pharpend/tefl/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2016, Peter Harpending.
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:
    RankNTypes
  exposed-modules:
    Data.Tefl
  build-depends:
      base ==4.8.*
    , bytestring
    , bzlib
    , conduit
    , conduit-extra
    , crypto-random
    , lzma
    , lzma-conduit
    , tar
    , zip-archive
    , zip-conduit
    , zlib

executable tefl
  hs-source-dirs:      exc
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base ==4.8.*
    , optparse-applicative

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:
      base ==4.8.*
    , hspec
